# ai_conversartions

./: .env  README.md  README.md_ols  ai_agent_conversation.py  ai_conversation.py  ai_rag_conversation.py  document_chain.py  langchain_huggingface_conversation.py  langchain_huggingface_qa.py  pyproject.toml  resume_vertor_store.py
beginner/: ai_agent_conversation.py  ai_conversation.py  document_chain.py  resume_vertor_store.py  retrievers.py
beginner/resume/db/chroma_resume_db/: chroma.sqlite3
resume/: resume.txt
