[tool.poetry]
name = "langchain-starter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain-huggingface = "^0.1.2"
langchain = "^0.3.14"
langchain_community = "^0.3.14"
chainlit = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
