[tool.poetry]
name = "ai_conversations"
version = "0.1.0"
description = ""
authors = ["Tarique Ansari <tariqueansari998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain-huggingface = "^0.1.2"
langchain = "^0.3.16"
langchain_community = "^0.3.14"
chainlit = "^2.0.0"
chromadb="^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
